# giraffe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  analyze_benchmark.py  benchmark.py  clustering.py  dataset.py  descriptors.py  embedding.py  environment.yml  featurizer.py  finetune.py  model.py  plot_annealing.py  preprocess.py  pygmt.py  pyproject.toml  sampling.py  setup.py  train.py  train_vae.py  utils.py  vae.py
configs/: default.ini  siglin_wae2.ini  siglin_wae3.ini
data/: 10k.smi  1k.smi  25k.smi  property_scales.json  test.txt
examples/: benchmark.py  benchmark_polaris.py  figure_annealing.py  figure_interpolation.py  figure_latentspace.py  figure_learning_curves.py  figure_prop_hist.py  figure_prop_interpolation.py  figure_sampled_sim.py  figure_sampled_sim_single.py
examples/figures/: interpolation.skc  similarity_single.csv
giraffe/: dataset.py  descriptors.py  embedding.py  featurizer.py  finetune.py  inference.py  model.py  preprocess.py  sampling.py  train.py  utils.py
giraffe/configs/: default.ini  siglin_wae2.ini  wae.ini
giraffe/data/: property_scales.json
giraffe/examples/: benchmark.py  benchmark_analysis.py  benchmark_polaris.py  figure_interpolation.py  figure_latentspace.py  figure_learning_curves.py  figure_prop_hist.py  figure_sampled_sim.py  (+2 more)
output/: sampled.csv
paper/: analyze_benchmarks.py  benchmark.py  figure_annealing.py  figure_interpolation.py  figure_latentspace.py  figure_learning_curves.py  figure_prop_hist.py  figure_prop_interpolation.py  figure_sampled_sim.py  figure_sampled_sim_single.py
tests/: test_model.py
(+11 files in other folders)
